--- a/scripts/imzML2IMSHDF5.ipynb
+++ b/scripts/imzML2IMSHDF5.ipynb
@@ -51,7 +51,7 @@
     "### Provide file names\n",
     "filename_imzML = '/Volumes/alexandr/shared/Luca/20150824_ADP_LR_Finger_Print_FullScan_DHBsub_80x80_15um.imzML'\n",
     "filename_IMShdf5 = '/Volumes/alexandr/shared/Luca/20150824_ADP_LR_Finger_Print_FullScan_DHBsub_80x80_15um.hdf5'\n",
-    "centroids = True #hacky hacky\n",
+    "centroids = True # <- lazy hack by Andy\n",
     "\n",
     "### Provide some file info\n",
     "# note, there is support for multiple sample types within a file but the code must be updated.\n",
