changed to latest version of inMemoryIMS (supports imzml & hdf5)

--- a/scripts/image_autogen.ipynb
+++ b/scripts/image_autogen.ipynb
@@ -44,7 +44,7 @@
     "save_dir='/Volumes/alexandr/shared/Luca/20150824_ADP_LR_Finger_Print_FullScan_DHBsub_80x80_15um_images'\n",
     "\n",
     "# Parse data\n",
-    "IMS_dataset=inMemoryIMS_hdf5(filename_in)\n",
+    "IMS_dataset=inMemoryIMS(filename_in)\n",
     "ppm = 0.75"
    ]
   },
@@ -279,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
