renamed h5, merged all export options into a single file

--- a/scripts/h5_to_centroid_imzml.ipynb
+++ b/scripts/h5_to_centroid_imzml.ipynb
@@ -6,49 +6,25 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/palmer/Documents/tmp_data/spheroids/14037s1_Spheroids24h_DHBSub.h5 True\n",
-      "dim:  39 x 34\n",
-      "finished!\n",
-      "/Users/palmer/Documents/tmp_data/spheroids/14040s1_Spheroids12h_DHBSub.h5 True\n",
-      "dim:  53 x 56\n",
-      "[/Users/palmer/Documents/tmp_data/spheroids/14040s1_Spheroids12h_DHBSub.h5] progress: 34.9%\n",
-      "[/Users/palmer/Documents/tmp_data/spheroids/14040s1_Spheroids12h_DHBSub.h5] progress: 69.9%\n",
-      "finished!\n",
-      "/Users/palmer/Documents/tmp_data/spheroids/Spheroids_sublimation_6h.h5 True\n",
-      "dim:  38 x 44\n",
-      "[/Users/palmer/Documents/tmp_data/spheroids/Spheroids_sublimation_6h.h5] progress: 74.7%\n",
-      "finished!\n",
-      "/Users/palmer/Documents/tmp_data/spheroids/Ctrl3s2_SpheroidsCtrl_DHBSub.h5 True\n",
-      "dim:  51 x 49\n",
-      "[/Users/palmer/Documents/tmp_data/spheroids/Ctrl3s2_SpheroidsCtrl_DHBSub.h5] progress: 40.1%\n",
-      "[/Users/palmer/Documents/tmp_data/spheroids/Ctrl3s2_SpheroidsCtrl_DHBSub.h5] progress: 80.3%\n",
-      "finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/site-packages/numpy/core/_methods.py:59: RuntimeWarning: Mean of empty slice.\n",
-      "  warnings.warn(\"Mean of empty slice.\", RuntimeWarning)\n",
-      "/usr/local/lib/python2.7/site-packages/numpy/core/_methods.py:70: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import sys\n",
     "import os\n",
     "sys.path.append(\"/Users/palmer/Documents/python_codebase\")\n",
-    "import pyIMS.convert.h5_to_imzml as h5_to_imzml\n",
-    "\n",
+    "sys.path.append(\"/Users/palmer/Documents/python_codebase/pyimzml/\")\n",
+    "import pyIMS.convert.h5_to_imzml as h5_to_imzml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "filein=\"/Users/palmer/Documents/tmp_data/spheroids/batch\"\n",
     "out_dr = '/Users/palmer/Documents/tmp_data/spheroids/imzml'\n",
     "with open(filein,'r') as f:\n",
@@ -61,6 +37,29 @@
     "        fout = os.path.join(out_dr,fn+\"imzML\")\n",
     "        print fin     , os.path.exists(fin)\n",
     "        h5_to_imzml.centroidh5(fin,fout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "files_in = [\n",
+    "    \"/Volumes/alexandr/shared/imagingMS/External/Private/UoND/EricWeaver/Spheroids/14037s1_Spheroids24h_DHBSub/14037s1_Spheroids24h_DHBSub.h5\",\n",
+    "    \"/Volumes/alexandr/shared/imagingMS/External/Private/UoND/EricWeaver/Spheroids/14040s1_Spheroids12h_DHBSub/14040s1_Spheroids12h_DHBSub.h5\",\n",
+    "    \"/Volumes/alexandr/shared/imagingMS/External/Private/UoND/EricWeaver/Spheroids/Ctrl3s2_SpheroidsCtrl_DHBSub/Ctrl3s2_SpheroidsCtrl_DHBSub.h5\",\n",
+    "    \"/Volumes/alexandr/shared/imagingMS/External/Private/UoND/EricWeaver/Spheroids/Spheroids_sublimation_6h/Spheroids_sublimation_6h.h5\"\n",
+    "]\n",
+    "out_dir = \"/Users/palmer/Documents/tmp_data/old_spheroids/\"\n",
+    "\n",
+    "for file_in in files_in:\n",
+    "    assert os.path.isfile(file_in)\n",
+    "    fname = os.path.splitext(os.path.basename(file_in))[0]\n",
+    "    out_name = out_dir + fname + \"_centroid.imzml\"\n",
+    "    h5_to_imzml.centroidh5(file_in,out_name,smoothMethod='apodization') "
    ]
   }
  ],
