--- a/pyImagingMSpec/scripts/h5_to_centroid_imzml.ipynb
+++ b/pyImagingMSpec/scripts/h5_to_centroid_imzml.ipynb
@@ -14,7 +14,7 @@
     "import os\n",
     "sys.path.append(\"/Users/palmer/Documents/python_codebase\")\n",
     "sys.path.append(\"/Users/palmer/Documents/python_codebase/pyimzml/\")\n",
-    "import pyIMS.convert.h5_to_imzml as h5_to_imzml"
+    "import pyImagingMSpec.convert.h5_to_imzml as h5_to_imzml"
    ]
   },
   {
