--- a/pyImagingMSpec/scripts/hdf5_centroid_to_imzml.ipynb
+++ b/pyImagingMSpec/scripts/hdf5_centroid_to_imzml.ipynb
@@ -13,7 +13,7 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(\"/Users/palmer/Documents/python_codebase\")\n",
-    "import pyIMS.convert.h5_to_imzml as h5_to_imzml\n",
+    "import pyImagingMSpec.convert.h5_to_imzml as h5_to_imzml\n",
     "\n"
    ]
   },
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "from pyIMS.hdf5.inMemoryIMS import inMemoryIMS\n",
+    "from pyImagingMSpec.hdf5.inMemoryIMS import inMemoryIMS\n",
     "fout = \"/Users/palmer/Documents/tmp_data/UCSD01902/UCSD_01902_centroids_IMS.imzML\"\n",
     "\n",
     "imsDataset = inMemoryIMS(fout,cache_spectra=True,min_mz=100., max_mz=200.)"
