--- a/pyImagingMSpec/scripts/image_autogen.ipynb
+++ b/pyImagingMSpec/scripts/image_autogen.ipynb
@@ -22,8 +22,8 @@
     "import sys\n",
     "sys.path.append('/Users/palmer/Documents/python_codebase/')\n",
     "from pyMS.centroid_detection import gradient\n",
-    "from pyIMS.hdf5.inMemoryIMS_hdf5 import inMemoryIMS_hdf5\n",
-    "from pyIMS.image_measures import level_sets_measure\n",
+    "from pyImagingMSpec.hdf5.inMemoryIMS_hdf5 import inMemoryIMS_hdf5\n",
+    "from pyImagingMSpec.image_measures import level_sets_measure\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
