--- a/pyImagingMSpec/scripts/imzML2IMSHDF5.ipynb
+++ b/pyImagingMSpec/scripts/imzML2IMSHDF5.ipynb
@@ -12,7 +12,7 @@
     "import sys\n",
     "%matplotlib inline\n",
     "sys.path.append('/Users/palmer/Documents/python_codebase/')\n",
-    "from pyIMS.hdf5.IMSdataset import IMSdataset\n",
+    "from pyImagingMSpec.hdf5.IMSdataset import IMSdataset\n",
     "from pyMS import centroid_detection\n",
     "from pyImzML import ImzMLParser\n",
     "import h5py\n",
