--- a/pyImagingMSpec/scripts/spectrum_rotator.ipynb
+++ b/pyImagingMSpec/scripts/spectrum_rotator.ipynb
@@ -14,7 +14,7 @@
     "import sys\n",
     "%matplotlib inline\n",
     "sys.path.append('/Users/palmer/Documents/python_codebase/')\n",
-    "from pyIMS.hdf5.IMSdataset import IMSdataset\n",
+    "from pyImagingMSpec.hdf5.IMSdataset import IMSdataset\n",
     "from pyMS import centroid_detection\n",
     "from pyImzML import ImzMLParser\n",
     "import h5py\n",
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "from pyIMS.hdf5.inMemoryIMS_hdf5 import inMemoryIMS_hdf5\n",
+    "from pyImagingMSpec.hdf5.inMemoryIMS_hdf5 import inMemoryIMS_hdf5\n",
     "### Provide file names\n",
     "filename_IMShdf5_in = '/Users/palmer/Documents/tmp_data/RatBrain_IMS/RatBrain_2013_09_20_centroids_IMS.hdf5'\n",
     "filename_IMShdf5_out = '/Users/palmer/Documents/tmp_data/RatBrain_IMS/RatBrain_2013_09_20_centroids_IMS_RB2_rotated1.hdf5'\n",
